webpack优化环境配置简单总结

--- a/4_webpack优化环节配置/17_优化配置介绍/优化配置介绍.MD
+++ b/4_webpack优化环节配置/17_优化配置介绍/优化配置介绍.MD
@@ -4,8 +4,20 @@
 
 ## 开发环境性能优化
 - 优化打包构建速度
+  - HRM：热模块替换，一个模块变化只重新构建这一个模块
 - 优化代码调试
+  - source-map：打包代码的映射关系
 
 ## 生产环境性能优化
 - 优化打包构建速度
+  - oneOf：同一类型文件由一个配置进行处理
+  - babel缓存：使用缓存让第二次构建宿舍更快
+  - 多进程打包：大项目下比较有用
+  - externals：指定某些依赖不参与打包，而使用CDN
+  - dll：单独打包，并且只打包一次
 - 优化代码运行的性能
+  - 缓存（hash-chunkhash-contenthash）：打包资源的hash值判断缓存更新
+  - tree shaking：去除没用到的代码
+  - code split：将一个模块拆分成多个模块打包
+  - 懒加载/预加载：使用时加载和提前加载，速度与体验
+  - PWA：离线访问技术
